--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # DataSource settings: set here configurations for the database connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=postgres@2023
 
