--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.datasource.initialization-mode=always
 spring.datasource.initialize=true
 #spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+
+spring.security.user.name=admin
+spring.security.user.password=12345
